--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Magic Eight Ball</string>
+    <string name="title1">Make Every Day Decisions</string>
+    <string name="title2">EASIER</string>
+    <string name="askButtonText">Ask</string>
+    <string name="ball1Image">ball1Image</string>
 </resources>
